unpackaged/main/default/objects/User/fields/Ad_Sales_Ad_Server_Id__c.field-meta.xml
<CustomField>
    <fullName>Ad_Sales_Ad_Server_Id__c</fullName>
    <description>String containing SF ID for Ad Server User (ad sales recordtype)</description>
    <label>Ad Sales Ad Server Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>