unpackaged/main/default/objects/User/fields/Ad_Server_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server_User_ID__c</fullName>
    <description>String containing SF ID for Ad Server User</description>
    <label>Ad Server User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>