unpackaged/main/default/objects/User/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Cost Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales:Developer (B2B)</fullName>
            </value>
            <value>
                <fullName>Sales:Renewal (B2C)</fullName>
            </value>
            <value>
                <fullName>Sales:NBT (B2C)</fullName>
            </value>
            <value>
                <fullName>Sales:Agency Business (B2C)</fullName>
            </value>
            <value>
                <fullName>Technology:Platform COE</fullName>
            </value>
            <value>
                <fullName>Sales:Customer Service</fullName>
            </value>
            <value>
                <fullName>Marketing:Trade - Developer</fullName>
            </value>
            <value>
                <fullName>Operations:Client Servicing Team</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Awards</fullName>
            </value>
            <value>
                <fullName>Sales Operations &amp; Enablement</fullName>
            </value>
            <value>
                <fullName>OMC</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Sales:Special Projects</fullName>
            </value>
            <value>
                <fullName>MaaS</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>FastKey</fullName>
            </value>
            <value>
                <fullName>Finance:Accounting</fullName>
            </value>
            <value>
                <fullName>Marketing:Trade - Agency &amp; Agents</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Sales:PGDS</fullName>
            </value>
            <value>
                <fullName>Finance:FP &amp; A</fullName>
            </value>
            <value>
                <fullName>Operations:Ad Operations</fullName>
            </value>
            <value>
                <fullName>Operations:PGDS</fullName>
            </value>
            <value>
                <fullName>Technology:Marketplace Engineering</fullName>
            </value>
            <value>
                <fullName>Product:Life Cycle Demand Gen &amp; Growth</fullName>
            </value>
            <value>
                <fullName>Technology:Data COE</fullName>
            </value>
            <value>
                <fullName>CBO: Agt TM</fullName>
                <isActive>false</isActive>
                <label>CBO: Agt TM</label>
            </value>
            <value>
                <fullName>CBO: BI</fullName>
                <isActive>false</isActive>
                <label>CBO: BI</label>
            </value>
            <value>
                <fullName>CBO: BPO</fullName>
                <isActive>false</isActive>
                <label>CBO: BPO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>