unpackaged/main/default/objects/User/fields/IsIpp__c.field-meta.xml
<CustomField>
    <fullName>IsIpp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsIpp</label>
    <type>Checkbox</type>
</CustomField>