unpackaged/main/default/objects/User/fields/NS_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Internal_ID__c</fullName>
    <externalId>true</externalId>
    <label>NS Internal ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>