unpackaged/main/default/objects/User/fields/Transfer_Account_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Account_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Account/Opportunity</label>
    <type>Checkbox</type>
</CustomField>