unpackaged/main/default/objects/User/fields/Webuser_ID__c.field-meta.xml
<CustomField>
    <fullName>Webuser_ID__c</fullName>
    <label>Webuser ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>