unpackaged/main/default/objects/User/listViews/AdminUsers.listView-meta.xml
<ListView>
    <fullName>AdminUsers</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>Subsidiary__c</columns>
    <columns>NS_Internal_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>System Administrator</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>notEqual</operation>
        <value>callback.admin@propertyguru.com.sg</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>notEqual</operation>
        <value>adarsha.nanda@algoworks.com</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>notEqual</operation>
        <value>propertyguru@algoworks.com</value>
    </filters>
    <label>Admin Users</label>
</ListView>