unpackaged/main/default/objects/User/listViews/B2B_Sales_Users.listView-meta.xml
<ListView>
    <fullName>B2B_Sales_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>MANAGER</columns>
    <columns>Sales_Head__c</columns>
    <columns>Team_Lead__c</columns>
    <columns>Webuser_ID__c</columns>
    <columns>NS_Internal_ID__c</columns>
    <columns>Subsidiary__c</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>Cost_Center__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>B2B Sales User</value>
    </filters>
    <label>B2B Sales Users</label>
</ListView>