unpackaged/main/default/objects/User/listViews/CST_team.listView-meta.xml
<ListView>
    <fullName>CST_team</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>Subsidiary__c</columns>
    <columns>Team_Lead__c</columns>
    <columns>NS_Internal_ID__c</columns>
    <columns>Ad_Server_User_ID__c</columns>
    <columns>Ad_Sales_Ad_Server_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>CST Team</value>
    </filters>
    <label>CST team</label>
</ListView>