unpackaged/main/default/objects/User/listViews/IPP_users.listView-meta.xml
<ListView>
    <fullName>IPP_users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CREATED_BY_ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>NS_Internal_ID__c</columns>
    <columns>Sales_Head__c</columns>
    <columns>Team_Lead__c</columns>
    <columns>Webuser_ID__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsIpp__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>IPP users</label>
</ListView>