unpackaged/main/default/objects/User/listViews/MY_Users.listView-meta.xml
<ListView>
    <fullName>MY_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>NS_Internal_ID__c</columns>
    <columns>Webuser_ID__c</columns>
    <columns>Team_Lead__c</columns>
    <columns>Sales_Head__c</columns>
    <columns>IS_FROZEN</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subsidiary__c</field>
        <operation>equals</operation>
        <value>PropertyGuru International (Malaysia) Sdn Bhd</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>startsWith</operation>
        <value>MY</value>
    </filters>
    <label>MY Users</label>
</ListView>