unpackaged/main/default/objects/User/listViews/SG_Commandos_Team.listView-meta.xml
<ListView>
    <fullName>SG_Commandos_Team</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>Subsidiary__c</columns>
    <columns>IS_FROZEN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>Team_Lead__c</columns>
    <columns>Sales_Head__c</columns>
    <columns>NS_Internal_ID__c</columns>
    <columns>Webuser_ID__c</columns>
    <columns>User_Long_ID__c</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>SG - Commandos Sales Rep</value>
    </filters>
    <label>SG Commandos Team</label>
</ListView>