unpackaged/main/default/objects/User/listViews/TH_users_active.listView-meta.xml
<ListView>
    <fullName>TH_users_active</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
    <columns>Subsidiary__c</columns>
    <columns>Webuser_ID__c</columns>
    <columns>NS_Internal_ID__c</columns>
    <columns>Team_Lead__c</columns>
    <columns>MANAGER</columns>
    <columns>Sales_Head__c</columns>
    <columns>IS_FROZEN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subsidiary__c</field>
        <operation>equals</operation>
        <value>&quot;AllProperty Media Co., Ltd. (Head Office)&quot;</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>TH users (Active)</label>
</ListView>